# theia-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: PLAN.md  implementation_plan.md  original-theia.swift
src/: main.rs
